# fastapi-sqlmodel-alembic

./: docker-compose.yml
src/: Dockerfile
src/app/: db.py  main.py  models.py
src/migrations/: env.py
src/migrations/versions/: 27d2620ffb1c_add_year.py  5cbe99cb4266_init.py
src/requirements/: pyproject.toml  requirements.txt
